[FIX] documentation: tabs responsiveness
Prior of this commit, the tabs were not responsive in the documentation

closes odoo/documentation#3062

--- a/extensions/odoo_theme/static/style.scss
+++ b/extensions/odoo_theme/static/style.scss
@@ -1134,6 +1134,8 @@ header {
     div[role="tablist"] {
         border-color: $gray-light;
         display: inline-flex;
+        overflow-x: auto;
+        overflow-y: clip;
         width: 100%;
     }
 
